--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 	min-height: 100px;
 }
 
-.footer{
+.footer {
 	background-color: #D1C4E9;
 	margin: 0px auto;
 	padding: 20px 0px 20px 0px;
@@ -34,6 +34,8 @@
 }
 
 body {
+	max-width: 100%;
+	overflow-x: hidden;
 	padding: 50px 0px 0px 0px;
 	z-index: 0;
 }
