--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,10 +8,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/font-awesome/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap-social/bootstrap-social.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
 
     <title>Log In|ELearing</title>
 </head>
@@ -19,24 +19,24 @@
 
 	<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-auto" href="../index.html">ELearning</a>
+            <a class="navbar-brand mr-auto" href="/">ELearning</a>
         </div>
     </nav>
 
     <div class="container">
     	<div class="row-content">
     		<div class="col-12">
-    			Don't have an account? <a href="./signup.html">Sign Up</a>
+    			Don't have an account? <a href="/signup">Sign Up</a>
     		</div>
     	</div>
 
         <div class="row row-content">
             <div class="col-10 col-md-8 col-lg-6">
-                <form class="form-example" action="" method="post"> 
+                <form class="form-example" action="/login" method="post"> 
                     <h3 class="text-secondary text-height">Log In</h1>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control username" id="email" placeholder="Email" name="email" required>
+                        <input type="email" class="form-control username" id="email" placeholder="Email" name="username" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
@@ -61,9 +61,11 @@
            </div>
     </footer>
 
-	<script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
+
+    <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	
     
 </body>
 </html>
