--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,22 +8,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="../css/styles.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+    <link type="text/css" rel="stylesheet" media="screen" href="/font-awesome/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap-social/bootstrap-social.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
 
     <title>Sign Up|ELearing</title>
 </head>
@@ -31,28 +19,24 @@
 
 	<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-auto" href="index.html">ELearning</a>
+            <a class="navbar-brand mr-auto" href="/">ELearning</a>
         </div>
     </nav>
 
     <div class="container">
     	<div class="row-content">
     		<div class="col-12">
-    			Already have an account? <a href="login.html">Log In</a>
+    			Already have an account? <a href="/login">Log In</a>
     		</div>
     	</div>
 
         <div class="row row-content">
             <div class="col-10 col-md-8 col-lg-6">
-                <form class="form-example" action="" method="post"> 
+                <form class="form-example" action="/signup" method="post"> 
                     <h3 class="text-secondary text-height">Sign Up</h1>
                     <div class="form-group">
-                        <label for="fname">First Name</label>
-                        <input type="text" class="form-control" id="fname" placeholder="First Name" name="fname" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="lname">Last Name</label>
-                        <input type="text" class="form-control" id="lname" placeholder="Last Name" name="lname" required>
+                        <label for="username">User Name</label>
+                        <input type="text" class="form-control" id="username" placeholder="user Name" name="username" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -88,6 +72,10 @@
         </div>
     </footer>
 
+
+    <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	
     
 </body>
