theme yi changed, bug fix

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,35 +8,25 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/font-awesome/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap-social/bootstrap-social.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
 
     <title>Sign Up|ELearing</title>
 </head>
 <body>
 
-	<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+	<nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand mr-auto" href="../index.html">ELearning</a>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">   </a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-                </ul>
-            </div>
+            <a class="navbar-brand mr-auto" href="/index">ELearning</a>
         </div>
     </nav>
 
     <div class="container">
     	<div class="row-content">
     		<div class="col-12">
-    			Already have an account? <a href="./login.html">Log In</a>
+    			Already have an account? <a href="/login">Log In</a>
     		</div>
     	</div>
 
@@ -45,12 +35,8 @@
                 <form class="form-example" action="" method="post"> 
                     <h3 class="text-secondary text-height">Sign Up</h1>
                     <div class="form-group">
-                        <label for="fname">First Name</label>
-                        <input type="text" class="form-control" id="fname" placeholder="First Name" name="fname" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="lname">Last Name</label>
-                        <input type="text" class="form-control" id="lname" placeholder="Last Name" name="lname" required>
+                        <label for="username">User Name</label>
+                        <input type="text" class="form-control" id="username" placeholder="user name" name="username" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -80,35 +66,7 @@
     </div>
 
     <footer class="footer">
-        <div class="container">
-            <div class="row">             
-                <div class="col-4 offset-1 col-sm-2">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="./aboutus.html">About</a></li>
-                        <li><a href="./contactus.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-7 offset-sm-1 col-sm-4">
-                    <h5>Contact Information</h5>
-                    <i class="fa fa-phone"></i>: +880 1608 537383<br>
-                    <i class="fa fa-envelope"></i>:<a href="mailto:dcode180042@gmail.com"> dcode180042@gmail.com</a>
-                    <div class="btn-group" role="group">
-                    <a role="button" class="btn btn-primary" href="tel:+8801608537383"><i class="fa fa-phone"></i>Call</a>
-                    <a role="button" class="btn btn-success" href="mailto:dcode180042@gmail.com"><i class="fa fa-envelope-o"></i>Email</a>
-                </div>
-                </div>
-                <div class="col-12 col-sm-4 align-self-center">
-                    <div class="text-center">
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row copyright"></div>
+        <div class="container">            
             <div class="row justify-content-center">  
                 <div class="col-auto">
                     <p>© Copyright 2020 Dead-Code-18</p>
@@ -116,9 +74,9 @@
             </div>
     </footer>
 
-	<script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="/jquery/dist/jquery.slim.min.js"></script>
+    <script src="/popper.js/dist/umd/popper.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     
 </body>
 </html>
