--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,70 +7,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>E-Learning</title>
-
-
     <!-- Bootstrap CSS -->
-
-
     <link type="text/css" rel="stylesheet" media="screen" href="/font-awesome/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap-social/bootstrap-social.css">
     <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;0,900;1,900&display=swap"
+        rel="stylesheet">
     <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
-
-
-
-
+    <title>ELearning</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-auto" href="/">ELearning</a>
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/index">ELearning</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class=" navbar-nav mr-auto">
+                    <li class="nav-item"> <a class="nav-link" href="/secret">course page</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="/aboutus">About</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="/contactus">Contact</a></li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="/login"><span class="fa fa-sign-in fa-lg"></span> Log
+                            In</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/signup"><span class="fa fa-plus fa-lg"></span> Sign
+                            Up</a></li>
+                </ul>
+
+            </div>
         </div>
     </nav>
 
     <div class="container">
-        <div class="row row-content">
-            <a href="/login">
-                <h4>Log In</h4>
-            </a>
-        </div>
-    
-        <div class="row row-content">
-            <a href="/signup">
-                <h4>Sign Up</h4>
-            </a>
+
+        <div class="jumbotron">
+            <h1>Learn Anything!</h1>
+            <p>A perfect place for students and teachers!! Make courses for free and be an instructor or just learn as
+                you want.</p>
+
+            <form class="form-inline d-flex md-form form-sm w-100">
+                <input class="form-control w-75" type="text" placeholder="find your course" aria-label="Search">
+                <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i>
+                    search</button>
+
+            </form>
+
         </div>
 
         <div class="row row-content">
-            <a href="/logout">
-                <h4>Log Out?</h4>
-            </a>
         </div>
-
         <div class="row row-content">
-            <a href="/secret">
-                <h4>secret page</h4>
-            </a>
+        </div>
+        <div class="row row-content">
+        </div>
+        <div class="row row-content">
+        </div>
+        <div class="row row-content">
+        </div>
+        <div class="row row-content">
         </div>
     </div>
-    
+
 
 
     <footer class="footer">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <p>© Copyright 2020 Dead-Code-18</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-4 offset-1 col-sm-2">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="/aboutus">About</a></li>
+                        <li><a href="/contactus">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-7 offset-sm-1 col-sm-4">
+                    <h5>Contact Information</h5>
+                    <i class="fa fa-phone"></i>: +880 1608 537383<br>
+                    <i class="fa fa-envelope"></i>:<a href="mailto:dcode180042@gmail.com"> dcode180042@gmail.com</a>
+                    <div class="btn-group" role="group">
+                        <a role="button" class="btn btn-primary" href="tel:+8801608537383"><i
+                                class="fa fa-phone"></i>Call</a>
+                        <a role="button" class="btn btn-success" href="mailto:dcode180042@gmail.com"><i
+                                class="fa fa-envelope-o"></i>Email</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 align-self-center">
+                    <div class="text-center">
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
+                                class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
+                                class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                                class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="row copyright"></div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <p>© Copyright 2020 Dead-Code-18</p>
+                </div>
+            </div>
     </footer>
 
-
-    <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="/jquery/dist/jquery.slim.min.js"></script>
+    <script src="/popper.js/dist/umd/popper.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
