fixed the footer and nav

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,12 +17,24 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top">
+	 <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-auto" href="/index">ELearning</a>
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/index">ELearning</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class=" navbar-nav mr-auto">
+                    <li class="nav-item"> <a class="nav-link" href="/secret">course page</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="/aboutus">About</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="/contactus">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
-
     <div class="container">
     	<div class="row-content">
     		<div class="col-12">
@@ -65,14 +77,46 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="container">            
+      <footer class="footer">
+        <div class="container">
+            <div class="row">             
+                <div class="col-3 offset-1 col-sm-2">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="./pages/aboutus.html">About</a></li>
+                        <li><a href="./pages/contactus.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-8 offset-sm-1 col-sm-3">
+                    <h5>Contact Information</h5>
+                    <i class="fa fa-phone"></i> : <a href="tel:+8801608537383">+880 1608 537383</a><br>
+                    <i class="fa fa-envelope"></i>:<a href="mailto:dcode180042@gmail.com"> dcode180042@gmail.com</a>
+
+                    <div class="btn-group" role="group">
+                        <a role="button" class="btn btn-secondary" href="tel:+8801608537383"><i class="fa fa-phone"></i>Call</a>
+                        <a role="button" class="btn btn-success" href="mailto:dcode180042@gmail.com"><i class="fa fa-envelope-o"></i>Email</a>
+                    </div>
+                </div>
+                
+                <div class="col-12 col-sm-1 copyright"></div>  
+                <div class="col-12 col-sm-4 align-self-center">
+                    <div class="text-center">   
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row copyright"></div>
             <div class="row justify-content-center">  
                 <div class="col-auto">
                     <p>© Copyright 2020 Dead-Code-18</p>
                 </div>
             </div>
     </footer>
+
 
 	<script src="/jquery/dist/jquery.slim.min.js"></script>
     <script src="/popper.js/dist/umd/popper.min.js"></script>
