--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 body{
 	font-family: 'Source Sans Pro', sans-serif;
+	max-width: 100%;
+	overflow-x: hidden;
+	padding: 50px 0px 0px 0px;
+	z-index: 0;
 }
 
 .row-header {
@@ -68,13 +72,6 @@ body{
 	margin-left: 250px;
 }
 
-body {
-	max-width: 100%;
-	overflow-x: hidden;
-	padding: 50px 0px 0px 0px;
-	z-index: 0;
-}
-
 .navbar-default .navbar-nav>li>a {
     color: white;
 }
@@ -90,6 +87,10 @@ body {
 
 .copyright {
 	min-height: 25px;
+}
+
+.headspace {
+	min-height: 65px;
 }
 
 .form-inline .form-control{
@@ -116,4 +117,97 @@ body {
 
 .row-content > *{
 	padding-left: 0px!important;
+}
+
+.emp-profile{
+    padding: 3%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-radius: 0.5rem;
+    background: #fff;
+}
+.profile-img{
+    text-align: center;
+}
+.profile-img img{
+    width: 70%;
+    height: 100%;
+}
+.profile-img .file {
+    position: relative;
+    overflow: hidden;
+    margin-top: -20%;
+    width: 70%;
+    border: none;
+    border-radius: 0;
+    font-size: 15px;
+    background: #212529b8;
+}
+.profile-img .file input {
+    position: absolute;
+    opacity: 0;
+    right: 0;
+    top: 0;
+}
+.profile-head h5{
+    color: #333;
+}
+.profile-head h6{
+    color: #0062cc;
+}
+.profile-edit-btn{
+    border: none;
+    border-radius: 1.5rem;
+    width: 70%;
+    padding: 2%;
+    font-weight: 600;
+    color: #6c757d;
+    cursor: pointer;
+}
+.proile-rating{
+    font-size: 12px;
+    color: #818182;
+    margin-top: 5%;
+}
+.proile-rating span{
+    color: #495057;
+    font-size: 15px;
+    font-weight: 600;
+}
+.profile-head .nav-tabs{
+    margin-bottom:5%;
+}
+.profile-head .nav-tabs .nav-link{
+    font-weight:600;
+    border: none;
+}
+.profile-head .nav-tabs .nav-link.active{
+    border: none;
+    border-bottom:2px solid #0062cc;
+}
+.profile-work{
+    padding: 14%;
+    margin-top: -15%;
+}
+.profile-work p{
+    font-size: 12px;
+    color: #818182;
+    font-weight: 600;
+    margin-top: 10%;
+}
+.profile-work a{
+    text-decoration: none;
+    color: #495057;
+    font-weight: 600;
+    font-size: 14px;
+}
+.profile-work ul{
+    list-style: none;
+}
+.profile-tab label{
+    font-weight: 600;
+}
+.profile-tab p{
+    font-weight: 600;
+    color: #0062cc;
 }
