deleted the unwanted and fixed the title

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
 
-    <title>Sign Up|ELearing</title>
+    <title>Log In|ELearing</title>
 </head>
 <body>
 
