--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -12,7 +12,7 @@
     <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap-social/bootstrap-social.css">
     <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
-    <title>ELearning</title>
+    <title>About us|ELearning</title>
 </head>
 
 <body>
