--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -1,39 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<!-- Required meta tags always come first -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <!-- Bootstrap CSS -->
-    <link type="text/css" rel="stylesheet" media="screen" href="/font-awesome/css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap-social/bootstrap-social.css">
-    <link type="text/css" rel="stylesheet" media="screen" href="/bootstrap/dist/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" media="screen" href="/styles.css">
-    <title>About us|ELearning</title>
-</head>
-
-<body>
-	<nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/index">ELearning</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class=" navbar-nav mr-auto">
-                    <li class="nav-item"> <a class="nav-link" href="/secret">course page</a></li>
-                    <li class="nav-item active"> <a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="/contactus">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<%- include('./partials/header', {title:'About Us|ELearning'}); %>
+<%- include('./partials/navbar', {pagename:'about', currentuser:currentuser}); %>
 
     <div class="container">
 
@@ -44,50 +10,4 @@
         </div>
     </div>	    
 
-     <footer class="footer">
-        <div class="container">
-            <div class="row">             
-                <div class="col-3 offset-1 col-sm-2">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="./pages/aboutus.html">About</a></li>
-                        <li><a href="./pages/contactus.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-8 offset-sm-1 col-sm-3">
-                    <h5>Contact Information</h5>
-                    <i class="fa fa-phone"></i> : <a href="tel:+8801608537383">+880 1608 537383</a><br>
-                    <i class="fa fa-envelope"></i>:<a href="mailto:dcode180042@gmail.com"> dcode180042@gmail.com</a>
-
-                    <div class="btn-group" role="group">
-                        <a role="button" class="btn btn-secondary" href="tel:+8801608537383"><i class="fa fa-phone"></i>Call</a>
-                        <a role="button" class="btn btn-success" href="mailto:dcode180042@gmail.com"><i class="fa fa-envelope-o"></i>Email</a>
-                    </div>
-                </div>
-                
-                <div class="col-12 col-sm-1 copyright"></div>  
-                <div class="col-12 col-sm-4 align-self-center">
-                    <div class="text-center">   
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row copyright"></div>
-            <div class="row justify-content-center">  
-                <div class="col-auto">
-                    <p>© Copyright 2020 Dead-Code-18</p>
-                </div>
-            </div>
-    </footer>
-
-
-    <script src="/jquery/dist/jquery.slim.min.js"></script>
-    <script src="/popper.js/dist/umd/popper.min.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+<%- include('./partials/footer'); %>
