--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="text-height"> </h2>
+                <h2 class="text-height"></h2>
             </div>
             <div class="col-12">
                 <h2 class="text-height text-secondary">Contact Us</h2>
@@ -78,7 +78,7 @@
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
                                 <label class="form-check-label" for="approve">
-                                    <strong>May we contact you?</strong>
+                                    May we contact you?
                                 </label>
                             </div>
                         </div>
