--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
             <ul class=" navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Courses</a>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu bg">
                         <a href="/courses" class="dropdown-item">Arts</a>
                         <a href="/courses" class="dropdown-item">Commerce</a>
                         <a href="/courses" class="dropdown-item">Science</a>
