--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,7 @@
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" name="approve" id="approve" value="" required>
                             <label class="form-check-label" for="approve">
-                                By signing up, you agree to our Terms of Use and Privacy Policy.
+                                By signing up, I agree to the Terms of Use and Privacy Policy.
                             </label>
                         </div>
                     </div>
