aded frontend initially

--- a/app/views/aboutus.ejs
+++ b/app/views/aboutus.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header', {title:'About Us|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'about', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'about'}); %>
 
    
 
