--- a/app/views/coursepage.ejs
+++ b/app/views/coursepage.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header', {title:'Course Page|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'index', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'index'}); %>
 
 <div class="container">
     <div class="row">
