--- a/app/views/courses.ejs
+++ b/app/views/courses.ejs
@@ -1,4 +1,4 @@
 <%- include('./partials/header', {title:'Courses|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'courses', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'courses'}); %>
 <h1>only authenticated users can access this page!!</h1>
 <%- include('./partials/footer'); %>
