--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header', {title:'Profile|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'profile', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'profile',user:user}); %>
 
 <div class="text-height"></div>
 
