--- a/app/views/contactus.ejs
+++ b/app/views/contactus.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header', {title:'Contact Us|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'contact', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'contact'}); %>
 
     <div class="container">
         <div class="row">
