--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -41,6 +41,8 @@
     <script src="/jquery/dist/jquery.slim.min.js"></script>
     <script src="/popper.js/dist/umd/popper.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/token.js"></script>
+
 
 </body>
 </html>
