--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header', {title:'Log In|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'login', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'login', user: user}); %>
 
   <div class="container">
         <div class="row-content">
@@ -10,11 +10,11 @@
 
         <div class="row row-content">
             <div class="col-10 col-md-8 col-lg-6">
-                <form class="form-example" action="" method="post"> 
+                <form class="form-example" action="/auth/signin" method="POST"> 
                     <h3 class="text-secondary text-height">Log In</h1>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control username" id="email" placeholder="Email" name="username" required>
+                        <input type="email" class="form-control username" id="email" placeholder="Email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
