--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -1,32 +1,45 @@
 <%- include('./partials/header', {title:'Sign Up|ELearning'}); %>
-<%- include('./partials/navbar', {pagename:'signup', currentuser:currentuser}); %>
+<%- include('./partials/navbar', {pagename:'signup', user: user}); %>
 
-    <div class="container">
-    	<div class="row-content">
-    		<div class="col-12">
-    			Already have an account? <a href="/login">Log In</a>
-    		</div>
-    	</div>
+<div class="container">
+    <div class="row-content">
+        <div class="col-12">
+            Already have an account? <a href="/login">Log In</a>
+        </div>
+    </div>
 
-        <div class="row row-content">
-            <div class="col-10 col-md-8 col-lg-6">
-                <form class="form-example" action="" method="post"> 
-                    <h3 class="text-secondary text-height">Sign Up</h1>
-                    <div class="form-group">
-                        <label for="username">User Name</label>
-                        <input type="text" class="form-control" id="username" placeholder="user name" name="username" required>
+    <div class="row row-content">
+        <div class="col-10 col-md-8 col-lg-6">
+            <form class="form-example" action="/auth/signup" method="POST">
+                <h3 class="text-secondary text-height">Sign Up</h1>
+                    <div class="form-group mb-3">
+                        <label for="firstName">First Name</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="First Name" name="firstName"
+                            required>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-3">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Last Name" name="lastName"
+                            required>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="username">User Name</label>
+                        <input type="text" class="form-control" id="username" placeholder="user name" name="username"
+                            required>
+                    </div>
+                    <div class="form-group mb-3">
                         <label for="email">Email</label>
                         <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-3">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password" name="password" pattern=".{5,50}" required title="Password must be between 5 and 50 charactrers">
+                        <input type="password" class="form-control" id="password" placeholder="Password" name="password"
+                            pattern=".{8,50}" required title="Password must be between 8 and 50 charactrers">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-3">
                         <div class="form-check">
-                            <input type="checkbox" class="form-check-input" name="approve" id="approve" value="" required>
+                            <input type="checkbox" class="form-check-input" name="approve" id="approve" value=""
+                                required>
                             <label class="form-check-label" for="approve">
                                 By signing up, I agree to the Terms of Use and Privacy Policy.
                             </label>
@@ -35,11 +48,11 @@
                     <div>
                         <button type="submit" class="btn btn-primary btn-customized">Sign Up</button>
                     </div>
-                </form>
-            </div>
-        </div> 
-
-        <div class="row-content"></div>
+            </form>
+        </div>
     </div>
+
+    <div class="row-content"></div>
+</div>
 
 <%- include('./partials/footer'); %>
