--- a/app/client/src/App.css
+++ b/app/client/src/App.css
@@ -1,9 +1,19 @@
-body {
-    margin: 0;
-    color: #6a6f8c;
-    background: #c8c8c8;
-    font: 600 16px/18px 'Open Sans', sans-serif
+body, h1, h2, h3, h4, h5, h6 {
+  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
+
+body {
+  margin: 0;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
+}
+
+
 
 .padding {
     padding: 3rem !important
@@ -58,3 +68,49 @@ body {
     background: none !important;
     color: #fff !important
 }
+
+Nav .btn{
+    letter-spacing: 0px;
+    border: none;
+    text-transform: none;
+    color: rgba(255,255,255,.5);
+}
+
+Nav .btn:hover{
+    border: none #FB8C00;
+    background: none !important;
+    color: none !important;
+}
+
+header{
+    background: url('./UI/bg-masthead.jpg')no-repeat center center;
+    background-size: cover;
+}
+
+@media (min-width:768px) {
+  header.masthead {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+  }
+}
+
+header.masthead {
+  position: relative;
+  background-color: #343a40;
+  background-size: cover;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.text-white {
+  color: #fff!important;
+}
+
+.text-center {
+  text-align: center!important;
+}
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+  display: block;
+}
+
