--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -9,4 +9,16 @@ body, html, .App, #root, .outer {
   height: 100%;
 }
 
+NavLink a{
+    display: block;
+    padding: .5rem 1rem;
+    color: rgba(255,255,255,.5);
+}
 
+.navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
+     color: rgba(255,255,255,.5);
+}
+
+.customLink{
+    color: rgba(255,255,255,.5);
+}
