--- a/app/client/src/App.css
+++ b/app/client/src/App.css
@@ -153,3 +153,19 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 .customLink{
     color: rgba(255,255,255,.5);
 }
+
+footer {
+    background-color: #343a40;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    font: bold 16px sans-serif;
+    margin-top: 120px;
+    margin-bottom: 1px;
+    padding: 10px 30px;
+    bottom: 0;
+    color: #fff
+}
+
+.bg-blue {
+    color: #fff;
+    background-color: #1A237E
+}
